--- a/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/player-multi-hybrid.css
+++ b/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/player-multi-hybrid.css
@@ -19,7 +19,11 @@ body
 {
   font-family:              Verdana;
 }   
- 
+
+table
+{
+  border-spacing:           0;
+} 
 #oc_title-bar
 {
   min-width:                760px;
@@ -74,8 +78,9 @@ body
 {
   min-width:                756px;
   height:                   510px;
-  margin-left:              5px;
-  margin-right:             5px;
+  margin-left:              10%;
+  margin-right:             10%;
+  position:                 relative; 
 }
 
 #oc_flash-player
@@ -470,11 +475,6 @@ body
   border-style:none;
 }
 
-.oc-segments 
-{ 
-  position:relative; 
-}
-
 .oc-segments-holder
 {
   overflow-x:scroll;
@@ -713,5 +713,3 @@ body
   border-left-width:1px;
   width: 100%;
 }
-
- 
