MH-3750, UI tweaks, audio monitor image
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7184 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/css/confidence.css
+++ b/modules/matterhorn-confidence-monitoring-ui/src/main/resources/ui/css/confidence.css
@@ -116,8 +116,8 @@ body {
 }
 
 .audio_meter {
-  height: 400px;
+  height: 480px;
   width: 40px;
   display: inline-block;
-  background-image: url('img/meter.png');
+  background-image: url('../img/meter.gif');
 }
