--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -219,6 +219,9 @@ select { font-size:1.15em; }
   display: none !important;
 }
 
+.date-start { display: none; }
+.date-end {display: none; }
+
 #category-selector-container {float:left;width:auto;margin:10px 0px 10px 10px;}
 .category-selector {margin:0px;margin-bottom:10px;}
 .category-selector li {float:left;list-style:none;}
