MH-3910 - Engage Player adds user footprints to the feedback service
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7201 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid.css
+++ b/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid.css
@@ -554,7 +554,7 @@ option:hover
 
 .oc-segments-holder
 {
-  overflow-x:scroll;
+  overflow-x:hidden;
   overflow-y:hidden;
   border:1px;
   border-style:solid;
