--- a/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/FullscreenVideoControlsView.mxml
+++ b/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/FullscreenVideoControlsView.mxml
@@ -18,10 +18,16 @@
 -->
 <mx:VBox 
     xmlns:mx = "http://www.adobe.com/2006/mxml"
-    
     xmlns:view = "org.opencast.engage.videodisplay.view.*"
     horizontalAlign="center"
     horizontalGap="0"
+    width="70%"
+    height="90%"
+    backgroundColor="0xFFFFFF"
+    backgroundAlpha="0.0"
+    rollOver="{this.NavigationVisible = true}"
+    rollOut="{this.NavigationVisible = false}"
+    creationComplete="startTimer();"
     >
 
     <mx:Script>
@@ -40,7 +46,27 @@
             [Autowire]
             [Bindable]
             public var model:VideodisplayModel;
+            
+            [Bindable]
+            private var NavigationVisible:Boolean = true;
 
+             /**
+             * starts a timer to hide the navigation elements
+             *
+             **/
+            private function startTimer():void
+            {
+                // creates a Timer
+            	var timer:Timer = new Timer(1000, 6);
+            	timer.addEventListener(TimerEvent.TIMER_COMPLETE, onTimerComplete);
+            	timer.start();
+            }
+            
+            public function onTimerComplete(event:TimerEvent):void
+       		{
+            	this.NavigationVisible = false;
+       		}
+            
             /**
              * normalscreen
              *
@@ -140,11 +166,17 @@
         ]]>
     </mx:Script>
     
+    <mx:Fade id="fadeOut" duration="1000" alphaFrom="1.0" alphaTo="0.0"/>
+    <mx:Fade id="fadeIn" duration="1000" alphaFrom="0.0" alphaTo="1.0"/>
+    
     <mx:HBox
     	width = "100%"
         height = "32"
     	horizontalAlign="center"
         horizontalGap="0"
+        visible="{this.NavigationVisible}"
+        hideEffect="{fadeOut}"
+        showEffect="{fadeIn}"
     	>
     	
     	<mx:Canvas
@@ -298,6 +330,9 @@
         toolTip = "Current Time {model.timeCode.getTC(model.currentPlayhead) } "
         dataTipFormatFunction = "seekDataTipFunc"
         styleName = "HSliderSeek"
+        visible="{this.NavigationVisible}"
+        hideEffect="{fadeOut}"
+        showEffect="{fadeIn}"
         />
   
 </mx:VBox>
