--- a/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid.css
+++ b/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid.css
@@ -27,27 +27,42 @@ table
 #oc_title-bar
 {
   min-width:                760px;
-  height:                   26px;
-  margin-left:              5px;
-  margin-right:             5px;
+  margin-left:              10%;
+  margin-right:             10%;
+}
+
+#oc_title-bar-container
+{
+  display:                  table-row; 
+  width:                    100%
+}
+
+#oc_title-bar-logo
+{
+  display:                  table-cell; 
+}
+
+#oc_title-bar-heading
+{
+  display:                  table-cell; 
+  width:                    100%;
 }
 
 #oc_title
 {
-  float:                    left;
+  padding-left:             5px;
   font-size:                1.5em;
   text-align:               left;
   height:                   100%;
+  vertical-align:           bottom;
 }
 
 #oc_title_from
 {
-  float:                    left;
   font-size:                1.0em;
   text-align:               left;
   height:                   100%;
-  padding-left:             5px; 
-  margin-top:               8px;
+  vertical-align:           bottom;  
 }
 
 #oc_search
@@ -55,6 +70,9 @@ table
   float:                    right;
   height:                   100%;
   padding-top:              3px;
+  display:                  table-cell;
+  white-space:              nowrap;
+  float:                    right;
 }
 
 .oc_search-Field
