MH-3943 hide navigation elements in fullscreen mode
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7231 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/FullscreenVideoControlsView.mxml
+++ b/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/FullscreenVideoControlsView.mxml
@@ -23,7 +23,7 @@
     horizontalGap="0"
     width="70%"
     height="90%"
-    backgroundColor="0xFFFFFF"
+    backgroundColor="0x000000"
     backgroundAlpha="0.0"
     rollOver="{this.NavigationVisible = true}"
     rollOut="{this.NavigationVisible = false}"
