MH-3967 -- replaced google hosted js lib with local js lib
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7268 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-util/src/main/resources/org/opencastproject/templates/rest/template.xhtml
+++ b/modules/matterhorn-util/src/main/resources/org/opencastproject/templates/rest/template.xhtml
@@ -356,7 +356,7 @@
 
 <!-- JAVASCRIPT below here -->
 <script type="text/javascript"
-  src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+  src="/infusion-1.1.2/InfusionAll.js"></script>
 <script type="text/javascript">
 /*global alert, jQuery  */
 (function($) {
