--- a/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
@@ -433,7 +433,6 @@ body
   background-position:      0 -445px;
   height:                   15px;
   width:                    13px;
-  margin-top:               -10px;
   margin-left:              -2px;
   position:                 relative; 
   border:                   0px;
@@ -534,20 +533,20 @@ body
   position:relative;
 }
 
-.scrubber-channel 
-{
+.scrubber-channel  { 
   display:block;
   margin-top:0;
-  padding-right:0px;
+  padding-right:0;
   position:relative;
+  top:-12px;
 }
+
 
 .progress-text 
 {
   display:block;
   font-family:Lucida Grande,Lucida San Unicode,Helvetica,Arial,sans-serif;
   font-size:10px;
-  
 }
 
 
