--- a/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/MediaView.mxml
+++ b/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/MediaView.mxml
@@ -40,6 +40,65 @@
         ]]>
     </mx:Script>
     
+    <mx:states>
+
+        <mx:State 
+            name = "single"
+            >
+
+            <mx:SetProperty 
+                target = "{ bx_single }"
+                name = "visible"
+                value = "true"
+                />
+
+            <mx:SetProperty 
+                target = "{ bx_single }"
+                name = "includeInLayout"
+                value = "true"
+                />
+        </mx:State>
+
+        <mx:State 
+            name = "multi"
+            >
+
+            <mx:SetProperty 
+                target = "{ bx_multi }"
+                name = "visible"
+                value = "true"
+                />
+
+            <mx:SetProperty 
+                target = "{ bx_multi }"
+                name = "includeInLayout"
+                value = "true"
+                />
+        </mx:State>
+        
+        <mx:State 
+            name = "cover"
+            >
+
+            <mx:SetProperty 
+                target = "{ bx_cover }"
+                name = "visible"
+                value = "true"
+                />
+
+            <mx:SetProperty 
+                target = "{ bx_cover }"
+                name = "includeInLayout"
+                value = "true"
+                />
+        </mx:State>
+        
+    </mx:states>
+    
+    
+    
+    
+    
     <mx:HBox
     	width="100%"
     	height="100%"
@@ -57,11 +116,28 @@
         
     </mx:HBox>
     
-    <view:MediaContainerView
-        id = "mediaContainerView"
+    <view:SingleMediaContainerView
+        id = "bx_single"
+        visible = "false"
+        includeInLayout = "false"
         width = "100%"
         height = "100%"
         />
+        
+    <view:MultiMediaContainerView 
+    	 id = "bx_multi"
+        visible = "false"
+        includeInLayout = "false"
+        width = "100%"
+        height = "100%"
+    	/>
+    	
+    <view:CoverView
+    	id = "bx_cover"
+        visible = "false"
+        includeInLayout = "false"
+        />	
+
 
     <view:Splashscreen 
         id = "splashscreen"
