--- a/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/Splashscreen.mxml
+++ b/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/Splashscreen.mxml
@@ -27,6 +27,7 @@
 
     <mx:Script>
         <![CDATA[
+        	import org.opencast.engage.videodisplay.state.VideoState;
         	import org.osmf.layout.VerticalAlign;
         	import bridge.ExternalFunction;
             import org.opencast.engage.videodisplay.control.event.SetVolumeEvent;
@@ -73,7 +74,11 @@
                 }
                 else
                 {
-                    playButton_up.visible = false;
+                    if( model.videoState != VideoState.COVER )
+                    {
+                    	 playButton_up.visible = false;
+                    }
+                   
                 }
 
             }
@@ -88,8 +93,18 @@
             {
                 Application.application.stage.displayState = StageDisplayState.FULL_SCREEN;
                 model.fullscreenMode = true;
-                model.layoutMetadataParallelElement.verticalAlign = VerticalAlign.MIDDLE;
             }
+            
+            private function play():void
+            {
+                ExternalInterface.call( ExternalFunction.PLAYPAUSE, '' );
+                if( model.videoState == VideoState.COVER )
+                {
+                    model.videoState = model.mediaPlayer.getVideoState();
+                }
+            
+            }
+            
         ]]>
     </mx:Script>
 
@@ -154,6 +169,8 @@
                 />
         </mx:Transition>
     </mx:transitions>
+    
+    
 
     <mx:Canvas 
         id = "curtain"
@@ -171,7 +188,7 @@
 
     <mx:Button 
         id = "playButton_up"
-        click = "{ ExternalInterface.call( ExternalFunction.PLAYPAUSE, '' ) }"
+        click = "{ play() }"
         width = "{this.width/10}"
         height = "{playButton_up.width}"
         styleName = "PlayBig"
