--- a/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/embed-hybrid-player.css
@@ -433,7 +433,6 @@ body
   background-position:      0 -445px;
   height:                   15px;
   width:                    13px;
-  margin-top:               -10px;
   margin-left:              -2px;
   position:                 relative; 
   border:                   0px;
@@ -538,8 +537,9 @@ body
 {
   display:block;
   margin-top:0;
-  padding-right:0px;
+  padding-right:0;
   position:relative;
+  top:-12px;
 }
 
 .progress-text 
@@ -547,7 +547,6 @@ body
   display:block;
   font-family:Lucida Grande,Lucida San Unicode,Helvetica,Arial,sans-serif;
   font-size:10px;
-  
 }
 
 
