--- a/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
@@ -533,14 +533,14 @@ body
   position:relative;
 }
 
-.scrubber-channel  { 
+.scrubber-channel 
+{
   display:block;
   margin-top:0;
   padding-right:0;
   position:relative;
   top:-12px;
 }
-
 
 .progress-text 
 {
