MH-2915, Autocomplete for series in the scheduler UI implemented.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7412 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/scheduler.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/scheduler.css
@@ -103,3 +103,13 @@
   color: blue;
   display: none;
 }
+
+/* Autocomplete */
+
+.ui-autocomplete {
+  width: 450px;
+}
+
+.ui-autocomplete li {
+  list-style: none;
+}
