--- a/modules/matterhorn-ingest-service-impl/src/main/resources/templates/inboxform.html
+++ b/modules/matterhorn-ingest-service-impl/src/main/resources/templates/inboxform.html
@@ -1,25 +1,57 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <title>AJAX file upload</title>
+    <title>Inbox file select</title>
     <meta http-equiv="cache-control" content="no-cache">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script type="text/javascript" src="../../admin/jquery/jquery-1.4.2.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
-        $.getJSON('../../collections/inbox', function(data) {   // get list of files in collection inbox from working file repository
+        $.getJSON('../../files/list/inbox.json', function(data) {   // get list of files in collection inbox from working file repository
           for (i in data) {
             var elm = document.createElement('option');
-            elm.innerHTML = data[i].name;
-            $(elm).attr('value', data[i].name);
+            var filename = data[i].split(/\//);
+            filename = filename[filename.length-1];
+            elm.innerHTML = filename;
+            $(elm).attr('value', filename);
             $('#file').append(elm);
           }
+          parent.UploadListener.fileSelectedAjax($('#file').val(),'');
         });
       });
+
+      /** Move selected file to inbox and add track to mediapackage xml
+       *
+       **/
+      function submit() {
+        var TRACK_ID = 'source-track';
+        var file = $('#file').val();
+        var flavor = $('#flavor').val();
+        var mp = parent.ocIngest.mediaPackage;
+        var mpId = $(mp.documentElement).attr('id');
+        $.ajax({
+          url : '../../files/move/inbox/' + file + '/' + mpId + '/' + TRACK_ID,
+          type : 'POST',
+          dataType : 'text',
+          success : function(data) {
+            var track = mp.createElement('track');
+            track = $(track).attr('type',flavor).attr('id', TRACK_ID);
+            var url = $(mp.createElement('url')).text(data);
+            track = $(track).append(url);
+            $(mp.documentElement).find('media').append(track);
+            $('#mp').val(parent.ocUtils.xmlToString(mp));
+            parent.UploadListener.uploadComplete();
+          }
+        });
+      }
     </script>
   </head>
   <body style="margin:0;padding:0;border:0;outline:0;vertical-align:baseline;background: transparent">
-  <select id="file" onchange="parent.UploadListener.fileSelectedAjax(this.value,'');" style="width:250px;">
-  </select>
+    <form name="uploadForm" id="uploadForm" action="javascript: submit();">
+      <input type="hidden" name="flavor" id="flavor" value="">
+      <input type="hidden" name="mediaPackage" id="mp" value="">
+      <select id="file" onchange="parent.UploadListener.fileSelectedAjax(this.value,'');" style="width:250px;">
+      </select>
+    </form>
   </body>
 </html>
