MH-4141 multistream player out of sync
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7451 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/MediaView.mxml
+++ b/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/MediaView.mxml
@@ -95,27 +95,6 @@
         
     </mx:states>
     
-    
-    
-    
-    
-    <mx:HBox
-    	width="100%"
-    	height="100%"
-    	horizontalAlign="center"
-    	verticalAlign="middle"
-    	>
-    	
-        <mx:SWFLoader 
-	        source="@Embed(source='../../../../../style/oc_logo_loader.swf')" 
-	        scaleContent="true" 
-	        autoLoad="true"
-	        visible="{ model.loader }"
-	        includeInLayout="{ model.loader }"
-	        />
-        
-    </mx:HBox>
-    
     <view:SingleMediaContainerView
         id = "bx_single"
         visible = "false"
@@ -130,6 +109,7 @@
         includeInLayout = "false"
         width = "100%"
         height = "100%"
+        currentState="{model.videoSizeState}"
     	/>
     	
     <view:CoverView
