--- a/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/player-multi-hybrid.css
+++ b/modules/matterhorn-engage-player/src/main/html/html-release/engage-hybrid-player/css/player-multi-hybrid.css
@@ -50,19 +50,12 @@ table
 
 #oc_title
 {
+  margin:                   0px;
   padding-left:             5px;
-  font-size:                1.5em;
   text-align:               left;
   height:                   100%;
   vertical-align:           bottom;
-}
-
-#oc_title_from
-{
-  font-size:                1.0em;
-  text-align:               left;
-  height:                   100%;
-  vertical-align:           bottom;  
+  font-weight:              normal;
 }
 
 #oc_search
@@ -109,7 +102,6 @@ table
 {
   text-align:               center;
   height:                   100%;
-  margin-bottom:            10px;
 }
 
 #oc_video-player-controls
@@ -296,6 +288,7 @@ table
   float:                    left;
   width:                    5%;
   text-align:               center;
+  visibility:               hidden;
 }
 
 #oc_video-size-controls
