--- a/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/FullscreenVideoControlsView.mxml
+++ b/modules/matterhorn-engage-player/src/main/flex/Videodisplay/org/opencast/engage/videodisplay/view/FullscreenVideoControlsView.mxml
@@ -248,8 +248,8 @@
                 
                <mx:Button 
                	    id="btn_playpause"
-                    toolTip = "{ model.currentPlayerState == PlayerState.PAUSING ? 'Play Button' : 'Pause Button' }"
-                    styleName = "{ model.currentPlayerState == PlayerState.PAUSING ? 'Play' : 'Pause' }"
+                    toolTip = "{ model.currentPlayerState == PlayerState.PAUSED ? 'Play Button' : 'Pause Button' }"
+                    styleName = "{ model.currentPlayerState == PlayerState.PAUSED ? 'Play' : 'Pause' }"
                     click = "{ ExternalInterface.call( ExternalFunction.PLAYPAUSE, '' ) }"
                     />
                     
