MH-3901: added paging to the recording screens
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7465 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -349,6 +349,20 @@ select { font-size:1.15em; }
   padding-right:5px;
 }
 
+/* Paging Navigation */
+.paging-nav-container {
+  float:right;
+}
+
+.paging-nav-goto {
+  width:50px;
+}
+
+.paging-nav-mocklink {
+  color: gray;
+  font-weight: bold;
+}
+
 /* Fluid Skinning System Overrides */
 
 .fl-theme-coal h1 {
