--- a/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
@@ -15,17 +15,13 @@
  */
  
 
-body
-{
-  font-family:              Verdana;
-}   
-  
 #oc_embed-title-bar
 {
   height:                   20px;
   width:                    100%;
   background-image:         url("../img/icons.png");
   background-position:      0 -4px;
+  margin-bottom:            5px;
 } 
   
 #oc_embed-title
@@ -42,24 +38,33 @@ body
   color:                    #FA6E23;
   margin-top:               2px;
 }
- 
-#clear
+
+body
+{
+  font-family:              Verdana;
+}   
+
+table
+{
+  border-spacing:           0;
+} 
+                    
+.clear
 {   
   clear:                    both;   
 }
 
 #oc_body
 {
-  width:                    100%;
-  
+  height:                   510px;
+
+  position:                 relative; 
 }
 
 #oc_flash-player
 {
-  witdh:                    100%;
   text-align:               center;
-  margin-bottom:            0px;
-  margin-top:               2px;
+  height:                   100%;
 }
 
 #oc_video-player-controls
@@ -87,14 +92,15 @@ body
 #simpleEdit 
 {
   margin-top:               12px;
-  margin-left:              5px;
+  margin-left:              10px;
+  font-size:                1.2em;
 }
 
 .oc_current-time
 {
   cursor:                   pointer;
   cursor:                   hand;
-  width:                    49px !important;
+  width:                    64px !important;
   background-color:         transparent !important;
   color:                    #FFFFFF;
 }
@@ -106,14 +112,14 @@ body
 
 .oc_edit-time
 {
- width:                     49px !important;
+  width:                    64px !important;
   background-color:         #E3E3D7 !important;
   color:                    #000000;
 }
 
 .oc_edit-time-error
 {
-  width:                    49px !important;
+  width:                    64px !important;
   background-color:         #ff0000;  
   color:                    #ffffff; 
 }
@@ -126,13 +132,13 @@ body
 {
   float:                    left;
   width:                    40%;
-  margin-left:              0px;
+  text-align:               right;
 }
 
 #oc_sound
 {
   float:                    left;
-  width:                    8%;
+  width:                    5%;
   text-align:               center;
 }
 
@@ -172,16 +178,44 @@ body
   background-image:         url("../img/icons.png");
   background-position:      0 -4px;
   text-align:               center;
-  margin-left:              -40px;
+  margin-left:              -50px;
 }
 
 #oc_volume-slider
 {
-  
+  width:                    8%;
   height:                   36px;
   float:                    left;
-  margin-right:             5px;
-  margin-left:              5px;
+  margin-right:             15px;
+  margin-left:              15px;
+}
+
+.oc_slider-volume-Rail 
+{
+  width:                    55px;
+  height:                   2px;
+  border:                   1px solid #999999;
+  position:                 relative;
+  background:               #fff;
+  margin-top:               12px;
+}
+
+.oc_slider-volume-Thumb:focus
+{
+  border:                   0px solid #999999;
+  background-color:         #EEEEEE;
+}
+
+.oc_slider-volume-Thumb
+{
+  background:               transparent url("../img/icons.png");
+  background-position:      0 -396px;
+  margin:                   0px;
+  padding:                  0px;
+  width:                    15px; 
+  height:                   9px;
+  position:                 absolute;
+  margin-top:               -3px;
 }
 
 .oc-slider-volume-Rail 
@@ -191,7 +225,7 @@ body
   border:                   1px solid #999999;
   position:                 relative;
   background:               #fff;
-  margin-top:               12px;
+  margin-top:               18px;
 }
 
 .oc-slider-volume-Thumb:focus
@@ -215,36 +249,15 @@ body
 #oc_video-cc
 {
   float:                    left;
-  width:                    8%;
+  width:                    5%;
   text-align:               center;
+  visibility:               hidden;
 }
 
 #oc_video-size-controls
 {
   float:                    right;
-  width:                    14%;
-}
-
-#oc_tabs
-{
-  width:                    100%;
-}
-
-#oc_tabs-input
-{
-  float:                    left;
-}
-
-#oc_tabs-search
-{
-  float:                    right;
-}
-
-#oc_tabs input
-{
-  width:                    100px;
-  margin-right:             5px;
-  margin-top:               2px;
+  width:                    12%;
 }
 
 #oc_video-size-dropdown
@@ -276,6 +289,16 @@ body
   display:                  inline;
 }
         
+#oc_video-size-dropdown li ul li a
+{   
+  background:               #000000;
+}
+
+#oc_video-size-dropdown li ul li a:hover
+{   
+  background:               #000000; 
+}
+
 #oc_video-size-dropdown-div
 {   
   height:                   28px;
@@ -284,6 +307,8 @@ body
   background-position:      0 -4px;
   text-align:               center;
 }
+
+
 
 .oc_progress-bar
 {
@@ -303,129 +328,11 @@ body
     background-color:       #7B7EAE;
 }
 
-.oc_offScreen-hidden 
-{
-    position:               absolute; 
-    left:                   -10000px; 
-    top:                    auto; 
-    width:                  1px; 
-    height:                 1px; 
-    overflow:               hidden;
-}
 
-.oc_slidesDisplayBlock
-{
-    display:                block;
-    text-align:             center;
-    margin:                 5px;
-    overflow:               auto; 
-}
-
-.oc_notesDisplayBlock
-{
-    display:                block;
-    text-align:             center;
-    margin:                 10px;
-    overflow:               auto; 
-    zoom:                   1;
-}
-
-.oc_slideTextDisplayBlock
-{
-    text-align:             center;
-    margin:                 10px;
-    overflow:               auto; 
-    zoom:                   1;
-
-}
-
-.oc_shortcutsDisplayBlock
-{
-    text-align:             left;
-    margin:                 10px;
-    overflow:               auto; 
-    zoom:                   1;
-}
-
-.oc_embedDisplayBlock
-{
-    text-align:             center;
-    margin:                 10px;
-    overflow:               auto; 
-    zoom:                   1;
-}
-
-.oc_DisplayNone
-{
-    display:                none;
-}
-
-.oc_btn-tabs
-{
-    width:                  40px;
-    margin-top:             4px;
-    margin-right:           10px;
-}
-
-.oc-segment-table 
-{ 
-  border-style:none;
-  border:0px;
-  margin:0px;
-}
-
-.oc-segment-td 
-{ 
-  border-style:none;
-}
-
-.oc-segments 
-{ 
-  position:relative; 
-}
-
-.oc-segments-holder
-{
-  overflow-x:scroll;
-  overflow-y:hidden;
-  border:1px;
-  border-style:solid;
-}
-  
-.player-chrome 
-{
-  background-image:url("../img/scrubber.gif");
-  height: 1px;
-}
  
-.progress-segment 
-{
-  border-bottom-color:#BDBDBD;
-  border-bottom-style:solid;
-  border-bottom-width:1px;
-  border-top-color:#EAEAEA;
-  border-top-style:solid;
-  border-top-width:1px;
-  border-left-color:#EAEAEA;
-  border-left-style:solid;
-  border-left-width:1px;
-  border-right-color:#EAEAEA;
-  border-right-style:solid;
-  border-right-width:1px;
-  border-left-color-ltr-source:physical;
-  border-left-color-rtl-source:physical;
-  border-left-color-value:#EAEAEA;
-  border-left-style-ltr-source:physical;
-  border-left-style-rtl-source:physical;
-  border-left-style-value:solid;
-  border-left-width-ltr-source:physical;
-  border-left-width-rtl-source:physical;
-  border-left-width-value:1px;
-  padding-bottom:0;
-  padding-left:7px;
-  padding-right:7px;
-  padding-top:0;
-}
+  
+
+ 
 
 .scrubber-button 
 {
@@ -433,10 +340,11 @@ body
   background-position:      0 -445px;
   height:                   15px;
   width:                    13px;
-  margin-left:              -2px;
+  margin-top:               -4px;
+  margin-left:              -6px;
   position:                 relative; 
   border:                   0px;
-  top:                      0px; 
+  top:                      -11px; 
   z-index:                  2;
 }
 
@@ -447,39 +355,11 @@ body
   height:                   15px;
   width:                    13px;
   margin-top:               -14px;
-  margin-left:              -2px;
+  margin-left:              -6px;
   position:                 relative; 
   border:                   0px;
-  top:                      0px; 
+  top:                      -12px; 
   z-index:                  3;
-}
-
-.play-segment 
-{
-  border-bottom-color:#BDBDBD;
-  border-bottom-style:solid;
-  border-bottom-width:1px;
-  border-left-color-ltr-source:physical;
-  border-left-color-rtl-source:physical;
-  border-left-color-value:#EAEAEA;
-  border-left-style-ltr-source:physical;
-  border-left-style-rtl-source:physical;
-  border-left-style-value:solid;
-  border-left-width-ltr-source:physical;
-  border-left-width-rtl-source:physical;
-  border-left-width-value:1px;
-  border-right-color-ltr-source:physical;
-  border-right-color-rtl-source:physical;
-  border-right-color-value:-moz-use-text-color;
-  border-right-style-ltr-source:physical;
-  border-right-style-rtl-source:physical;
-  border-right-style-value:none;
-  border-right-width-ltr-source:physical;
-  border-right-width-rtl-source:physical;
-  border-right-width-value:0;
-  border-top-color:#EAEAEA;
-  border-top-style:solid;
-  border-top-width:1px;
 }
 
 .progress-segment 
@@ -509,14 +389,14 @@ body
 {
   background-image:url("../img/icons.png");
   background-position: 0 -432px;
-  height: 13px;
+  height: 7px;
 }
 
 .load-progress 
 {
   background-image:url("../img/icons.png");
   background-position: 0 -419px;
-  height: 13px;
+  height: 7px;
   display:block;
   margin-top:0;
   position:relative;
@@ -535,11 +415,11 @@ body
 
 .scrubber-channel 
 {
-  display:block;
+   display:block;
   margin-top:0;
-  padding-right:0;
+  padding-right:0px;
   position:relative;
-  top:-12px;
+  top: -12px;
 }
 
 .progress-text 
@@ -547,30 +427,13 @@ body
   display:block;
   font-family:Lucida Grande,Lucida San Unicode,Helvetica,Arial,sans-serif;
   font-size:10px;
+  
 }
 
 
 
-.duration-segment  
+.segment-holder 
 {
-  border-bottom-color:#BDBDBD;
-  border-bottom-style:solid;
-  border-bottom-width:1px;
-  border-right-color-ltr-source:physical;
-  border-right-color-rtl-source:physical;
-  border-right-color-value:#BDBDBD;
-  border-right-style-ltr-source:physical;
-  border-right-style-rtl-source:physical;
-  border-right-style-value:solid;
-  border-right-width-ltr-source:physical;
-  border-right-width-rtl-source:physical;
-  border-right-width-value:1px;
-  border-top-color:#EAEAEA;
-  border-top-style:solid;
-  border-top-width:1px;
-}
-
-.segment-holder {
   background-image:url("../img/scrubber.gif");
   height:25px;
   border-bottom-color:#000000;
@@ -591,7 +454,8 @@ body
   padding-top:0.0em;
 }
 
-.segment-holder-over {
+.segment-holder-over 
+{
   background-image:url("../img/scrubber.gif");
   background-position:0 -20px;
   height:25px;
@@ -614,12 +478,3 @@ body
 }
 
 
-.segments {
-  border-left-color:#000000;
-  border-left-style:solid;
-  border-left-width:1px;
-  width: 100%;
-}
-
- 
- 
