--- a/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
@@ -477,4 +477,9 @@ table
   padding-top:0.0em;
 }
 
-
+.segments {
+  border-left-color:#000000;
+  border-left-style:solid;
+  border-left-width:1px;
+  width: 100%;
+}
