--- a/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
@@ -477,7 +477,8 @@ table
   padding-top:0.0em;
 }
 
-.segments {
+.segments 
+{
   border-left-color:#000000;
   border-left-style:solid;
   border-left-width:1px;
